--- a/qt5/qt5-base/PKGBUILD
+++ b/qt5/qt5-base/PKGBUILD
@@ -5,16 +5,16 @@
 pkgbase=qt5-base
 pkgname=(qt5-base qt5-xcb-private-headers)
 _basever=5.15.3
-pkgver=5.15.3+kde+r133
+pkgver=5.15.3+kde+r137
 pkgrel=1
-_commit=e68ca8e51375d963b2391715f70b42707992dbd8
+_commit=ee7a89b2c4750bc3cabe4aeb466645d6ac2a872b
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.qt.io'
 license=('GPL3' 'LGPL3' 'FDL' 'custom')
 pkgdesc='A cross-platform application and UI framework'
 depends=('libjpeg-turbo' 'xcb-util-keysyms' 'xcb-util-renderutil' 'libgl' 'fontconfig' 'xdg-utils'
          'shared-mime-info' 'xcb-util-wm' 'libxrender' 'libxi' 'sqlite' 'xcb-util-image' 'mesa'
-         'tslib' 'libinput' 'libxkbcommon-x11' 'libcups' 'double-conversion' 'md4c')
+         'tslib' 'libinput' 'libxkbcommon-x11' 'libproxy' 'libcups' 'double-conversion' 'md4c')
 makedepends=('mariadb-libs' 'unixodbc' 'postgresql-libs' 'alsa-lib' 'gst-plugins-base-libs'
              'gtk3' 'libpulse' 'cups' 'freetds' 'vulkan-headers' 'git')
 optdepends=('qt5-svg: to use SVG icon themes'
