--- a/libdmtx/PKGBUILD
+++ b/libdmtx/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=0.7.5
 pkgrel=2
 pkgdesc="A software for reading and writing Data Matrix 2D barcodes"
 url="https://libdmtx.sourceforge.net/"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL2)
 depends=(glibc)
 source=("https://github.com/dmtx/libdmtx/archive/v$pkgver/$pkgname-$pkgver.tar.gz")
