--- a/libxmlb/PKGBUILD
+++ b/libxmlb/PKGBUILD
@@ -2,29 +2,30 @@
 # Maintainer: Bruno Pagani <archange@archlinux.org>
 
 pkgname=libxmlb
-pkgver=0.3.3
+pkgver=0.3.7
 pkgrel=1
 pkgdesc="Library to help create and query binary XML blobs"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://github.com/hughsie/libxmlb"
 license=(LGPL)
 depends=(glib2 libstemmer xz)
 makedepends=(meson gobject-introspection gtk-doc)
 checkdepends=(shared-mime-info)
 source=("https://people.freedesktop.org/~hughsient/releases/${pkgname}-${pkgver}.tar.xz"{,.asc})
-sha256sums=('931f59aa3635397ad580c8b46cad5caa9632997fa505b92bd6661d98b0b11bf6' 'SKIP')
+sha256sums=('d0feaf7f4fb182c1cbacb47bdd321b8f2ca85309f1ff6f5d7415c2a069f4cfb0'
+            'SKIP')
 validpgpkeys=(163EB50119225DB3DF8F49EA17ACBA8DFA970E17) # Richard Hughes <richard@hughsie.com>
 
 build() {
-    arch-meson ${pkgname}-${pkgver} build -D stemmer=true
-    ninja -v -C build
+  arch-meson ${pkgname}-${pkgver} build -D stemmer=true
+  ninja -v -C build
 }
 
 check() {
-    meson test -C build --print-errorlogs
+  meson test -C build --print-errorlogs
 }
 
 package() {
-    DESTDIR="${pkgdir}" meson install -C build
-    rm -r "${pkgdir}"/usr/{lib,share}/installed-tests/
+  DESTDIR="${pkgdir}" meson install -C build
+  rm -r "${pkgdir}"/usr/{lib,share}/installed-tests/
 }
