--- a/appstream/PKGBUILD
+++ b/appstream/PKGBUILD
@@ -5,20 +5,21 @@
 
 pkgbase=appstream
 pkgname=(appstream appstream-qt)
-pkgver=0.14.5
-pkgrel=2
+pkgver=0.15.2
+pkgrel=1.1
 pkgdesc='Provides a standard for creating app stores across distributions'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://distributions.freedesktop.org/wiki/AppStream'
 license=(GPL)
-depends=(curl librsvg libyaml libstemmer lmdb libsoup)
+depends=(curl librsvg libyaml libxmlb libsoup)
 makedepends=(meson xmlto gobject-introspection gtk-doc qt5-tools itstool vala gperf)
 source=(https://www.freedesktop.org/software/appstream/releases/AppStream-$pkgver.tar.xz{,.asc}
         update-appstream-cache.hook)
-sha256sums=('0bc1db19608141b090cb25d004fab2bb3b3ee8b2716de8bac162fefebe9a5ad1'
+sha256sums=('8f6c1cd288c7c59f5bf21746a6cfd1424cd9d7cbeb0b7920dbcdf9ef10e9c74a'
             'SKIP'
             '3a96a1479cfd18dad36c2ca3181aabe46af9bf772c00b965d86ec5f55cd0e0eb')
 validpgpkeys=(D33A3F0CA16B0ACC51A60738494C8A5FBF4DECEB) # Matthias Klumpp <matthias@tenstral.net>
+options=(debug)
 
 build() {
   meson build AppStream-$pkgver \
@@ -36,7 +37,7 @@ package_appstream() {
 # provided by -qt subpackage
   rm -r "$pkgdir"/usr/{include/AppStreamQt,lib/cmake,lib/libAppStreamQt.*}
 
-  install -Dm644 update-appstream-cache.hook "$pkgdir"/usr/share/libalpm/hooks/update-appstream-cache.hook
+  install -Dm644 update-appstream-cache.hook "$pkgdir"/usr/share/libalpm/hooks/90-update-appstream-cache.hook
 }
 
 package_appstream-qt() {
