--- a/discount/PKGBUILD
+++ b/discount/PKGBUILD
@@ -6,9 +6,9 @@
 
 pkgname=discount
 pkgver=2.2.7
-pkgrel=1
+pkgrel=2
 pkgdesc='A Markdown implementation written in C'
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.pell.portland.or.us/~orc/Code/discount/"
 license=('custom:BSD')
 source=($pkgname-$pkgver.tar.gz::"https://github.com/Orc/discount/archive/v$pkgver.tar.gz"
@@ -16,9 +16,6 @@ source=($pkgname-$pkgver.tar.gz::"https://github.com/Orc/discount/archive/v$pkgv
 sha256sums=('72c1325ddfc40871d6810f1e272cf2d45b361f26357eb38f170fd04d737bb9f2'
             '7eced2472fdbe25badc13c35dfd6920b68b5a208889ee031ef0c060c093cc89b')
 depends=(glibc)
-conflicts=(markdown)
-provides=(markdown)
-replaces=(markdown)
 
 prepare() {
   patch -d $pkgname-$pkgver -p1 -i ../discount-ldflags.patch # Honor system ldflags
@@ -26,7 +23,12 @@ prepare() {
 
 build() {
   cd $pkgname-$pkgver
-  ./configure.sh --prefix=/usr --enable-all-features --with-fenced-code --shared
+  ./configure.sh \
+    --prefix=/usr \
+    --enable-all-features \
+    --with-fenced-code \
+    --github-checkbox \
+    --shared
   make -j1
 }
 
