--- a/meson/PKGBUILD
+++ b/meson/PKGBUILD
@@ -4,11 +4,11 @@
 # Contributor: Anatol Pomozov <anatol dot pomozov at gmail>
 
 pkgname=meson
-pkgver=0.62.0
+pkgver=0.61.4
 pkgrel=1
 pkgdesc='High productivity build system'
 url='https://mesonbuild.com/'
-arch=(any)
+arch=('any')
 license=('Apache')
 depends=('python-setuptools' 'ninja')
 checkdepends=('gcc-objc' 'vala' 'rust' 'gcc-fortran' 'mono' 'boost' 'qt5-base' 'git' 'cython'
@@ -20,9 +20,9 @@ checkdepends=('gcc-objc' 'vala' 'rust' 'gcc-fortran' 'mono' 'boost' 'qt5-base' '
 source=(https://github.com/mesonbuild/meson/releases/download/${pkgver}/meson-${pkgver}.tar.gz{,.asc}
         skip-test.diff
         arch-meson)
-sha512sums=('96cbcc9ce731b856a89fa96a3929570627cb87a5f2079d7d087f5a7e7c5c59db15f2ab544f11d128b568dd7f12739617e3fd79d6bcb4e995f9cd5a6f9de9fabb'
+sha512sums=('005f52c678016f3183d36b69254cceab16c682d2389ec9cae41889955a13cb643aea03f2247f3473cfeca9c4dd6c1cc8b9b8b9906dc324c08016c72380a5f195'
             'SKIP'
-            '201e1d19d4acedadc0ed38a6ec56b90266cd7caf72db46869282489e5d52be949f7794b53bbf5ccc328ce902a90b8cebe59716ca2b2493eeaef26821e44557dc'
+            '5a5cd1b2e12f63eab787e4e102f2bdf2b170f0a7f2675f6f4f8ae5dc8188ccab5f488dcecfbb3ab69e4c70e266d5bf5a8270214c0dc20efcca77bab976f6e38a'
             'f451f8a7ef9cf1dd724c2ce20bb85a3f1611b87b2e7a17ef0fdbe8ab82a67389f818ea30a5adfe8413143e4eac77ea2e0b8234b5b2466b41a892e2bd0435376c')
 validpgpkeys=('19E2D6D9B46D8DAA6288F877C24E631BABB1FE70') # Jussi Pakkanen <jpakkane@gmail.com>
 
@@ -52,6 +52,7 @@ package() {
   cp -rt "${pkgdir}/usr/share/vim/vimfiles" data/syntax-highlighting/vim/*/
 
   install -Dt "${pkgdir}/usr/share/bash-completion/completions" -m644 data/shell-completions/bash/*
+  install -Dt "${pkgdir}/usr/share/emacs/site-lisp" -m644 data/syntax-highlighting/emacs/*
   install -Dt "${pkgdir}/usr/share/zsh/site-functions" -m644 data/shell-completions/zsh/*
 
   # Arch packaging helper
