--- a/kde/drkonqi/PKGBUILD
+++ b/kde/drkonqi/PKGBUILD
@@ -2,22 +2,23 @@
 # Maintainer:Antonio Rojas <arojas@archlinux.org>
 
 pkgname=drkonqi
-pkgver=5.23.5
+pkgver=5.24.4
 pkgrel=1
 pkgdesc='The KDE crash handler'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://kde.org/plasma-desktop/'
 license=(GPL2)
 depends=(kidletime kio syntax-highlighting gdb)
 makedepends=(extra-cmake-modules)
 groups=(plasma)
 source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('a56297409d7c35e8aa85c7369ee3df157646d656bbcbeedbb9af369345815222'
+sha256sums=('a0a794c486d714daec18e8b056e86167cb13281f6588a8810eb55b6e91f4c7fa'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
               'D07BD8662C56CB291B316EB2F5675605C74E02CF'  # David Edmundson <davidedmundson@kde.org>
               '1FA881591C26B276D7A5518EEAAF29B42A678C20') # Marco Martin <notmart@gmail.com>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
