--- a/kde/kactivitymanagerd/PKGBUILD
+++ b/kde/kactivitymanagerd/PKGBUILD
@@ -3,22 +3,23 @@
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=kactivitymanagerd
-pkgver=5.23.5
+pkgver=5.24.4
 pkgrel=1
 pkgdesc='System service to manage user activities and track the usage patterns'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://kde.org/plasma-desktop/'
 license=(LGPL)
 depends=(kio)
 makedepends=(extra-cmake-modules boost)
 groups=(plasma)
 source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('b6c5c670708ff4e87ecade6ce6e0c65e1009228e15c8aac023c9283254bc6627'
+sha256sums=('8128371fd75f7dd4ccb2203ad775e6f12db28bbb64047d0fd63eb745d8735529'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
               'D07BD8662C56CB291B316EB2F5675605C74E02CF'  # David Edmundson <davidedmundson@kde.org>
               '1FA881591C26B276D7A5518EEAAF29B42A678C20') # Marco Martin <notmart@gmail.com>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
