--- a/kde/libksysguard/PKGBUILD
+++ b/kde/libksysguard/PKGBUILD
@@ -4,24 +4,27 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=libksysguard
-pkgver=5.23.5
+pkgver=5.24.4
 pkgrel=1
 pkgdesc='Library to retrieve information on the current status of computer hardware'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://kde.org/plasma-desktop/'
 license=(LGPL)
-depends=(libxres qt5-webengine kdeclarative knewstuff)
+depends=(libxres kdeclarative knewstuff)
+depends_powerpc64le=(qt5-webengine)
+depends_x86_64=(qt5-webengine)
 makedepends=(extra-cmake-modules kdoctools qt5-tools)
 conflicts=('ksysguard<5.21.90')
 groups=(plasma)
 source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
 install=libksysguard.install
-sha256sums=('3030a6d579b8c2bd713677f1bd32dafaaf8ff2237b8be2177d7c9f3f677ec1bf'
+sha256sums=('76da2a7fb7f760c55111db756d91dd3041721baa8a1f8863ad9e0bc0a6a02402'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
               'D07BD8662C56CB291B316EB2F5675605C74E02CF'  # David Edmundson <davidedmundson@kde.org>
               '1FA881591C26B276D7A5518EEAAF29B42A678C20') # Marco Martin <notmart@gmail.com>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
