--- a/kde/kscreenlocker/PKGBUILD
+++ b/kde/kscreenlocker/PKGBUILD
@@ -2,10 +2,10 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=kscreenlocker
-pkgver=5.23.5
+pkgver=5.24.4
 pkgrel=1
 pkgdesc='Library and components for secure lock screen architecture'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://kde.org/plasma-desktop/'
 license=(LGPL)
 groups=(plasma)
@@ -13,12 +13,13 @@ depends=(layer-shell-qt kidletime kwayland kdeclarative perl)
 makedepends=(extra-cmake-modules kdoctools kcmutils libxcursor)
 optdepends=('kcmutils: configuration module')
 source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('f5ca9dd81f17c599e11a51c6e986ff768ad88c0bde7e42e097d6a7efd9e6701f'
+sha256sums=('fb226273064422f9f73b6b091e26396349e0cfd53a88398b79fa2acd1540ecf7'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
               'D07BD8662C56CB291B316EB2F5675605C74E02CF'  # David Edmundson <davidedmundson@kde.org>
               '1FA881591C26B276D7A5518EEAAF29B42A678C20') # Marco Martin <notmart@gmail.com>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
