--- a/kde/kdecoration/PKGBUILD
+++ b/kde/kdecoration/PKGBUILD
@@ -4,22 +4,23 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kdecoration
-pkgver=5.23.5
+pkgver=5.24.4
 pkgrel=1
 pkgdesc='Plugin based library to create window decorations'
 arch=(x86_64 powerpc64le powerpc)
 url='https://kde.org/plasma-desktop/'
 license=(LGPL)
-depends=(ki18n)
+depends=(ki18n kcoreaddons)
 makedepends=(extra-cmake-modules)
 groups=(plasma)
 source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('48982039397a7a58552d649cf8166dfc27b578cf2cb8c1b59b86785e124512cf'
+sha256sums=('2c999206c51a6a6c5ecda211773276438f0069a2e1c81d4903ae5712c6f28c15'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
               'D07BD8662C56CB291B316EB2F5675605C74E02CF'  # David Edmundson <davidedmundson@kde.org>
               '1FA881591C26B276D7A5518EEAAF29B42A678C20') # Marco Martin <notmart@gmail.com>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
