--- a/kde/breeze/PKGBUILD
+++ b/kde/breeze/PKGBUILD
@@ -4,9 +4,9 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=breeze
-pkgver=5.23.0
+pkgver=5.24.4
 pkgrel=1
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 pkgdesc='Artwork, styles and assets for the Breeze visual style for the Plasma Desktop'
 url='https://kde.org/plasma-desktop/'
 license=(LGPL)
@@ -16,12 +16,13 @@ optdepends=('breeze-gtk: Breeze widget style for GTK applications'
             'kcmutils: for breeze-settings')
 groups=(plasma)
 source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('2003f168b3d60f5897486d9582631f75da7f0dc2625e9c4cddd9aa3d706bfd9e'
+sha256sums=('e369ee21e6aab1d5e3ae222ecd84bdb59f3d29ce3b61965b498bbfe84c949805'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
               'D07BD8662C56CB291B316EB2F5675605C74E02CF'  # David Edmundson <davidedmundson@kde.org>
               '1FA881591C26B276D7A5518EEAAF29B42A678C20') # Marco Martin <notmart@gmail.com>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
