--- a/kde/libqaccessibilityclient/PKGBUILD
+++ b/kde/libqaccessibilityclient/PKGBUILD
@@ -4,7 +4,7 @@
 pkgname=libqaccessibilityclient
 pkgver=0.4.1
 pkgrel=2
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 pkgdesc="Helper library to make writing accessibility tools easier"
 url='https://www.kde.org'
 license=(LGPL2.1)
