--- a/tcl/PKGBUILD
+++ b/tcl/PKGBUILD
@@ -3,9 +3,10 @@
 
 pkgname=tcl
 pkgver=8.6.12
-pkgrel=3
+pkgrel=3.1
 pkgdesc="Powerful, easy-to-learn dynamic programming language"
 arch=(x86_64 powerpc64le powerpc riscv64)
+arch=(riscv64)
 url="http://tcl.sourceforge.net/"
 license=('custom')
 depends=('zlib')
