--- a/python/python-jinja/PKGBUILD
+++ b/python/python-jinja/PKGBUILD
@@ -5,9 +5,10 @@
 
 pkgname=python-jinja
 pkgver=3.0.3
-pkgrel=3
+pkgrel=1
+epoch=1
 pkgdesc="A simple pythonic template language written in Python"
-arch=('any')
+arch=(any)
 url="https://palletsprojects.com/p/jinja/"
 license=('BSD')
 depends=('python-setuptools' 'python-markupsafe')
