--- a/kde/plasma-integration/PKGBUILD
+++ b/kde/plasma-integration/PKGBUILD
@@ -3,22 +3,23 @@
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=plasma-integration
-pkgver=5.23.5
+pkgver=5.24.4
 pkgrel=1
 pkgdesc='Qt Platform Theme integration plugins for the Plasma workspaces'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://kde.org/plasma-desktop/'
 license=(LGPL)
 depends=(kio kwayland libxcursor noto-fonts ttf-hack qqc2-desktop-style perl)
 makedepends=(extra-cmake-modules breeze)
 groups=(plasma)
 source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('8f9672da0501e835763254e24b36069ba3bcd6c5ba90505fdfb7b1923766800d'
+sha256sums=('73d4993d2c7aeabbb068e8d28821566d04f2dcb882dd1d92feadc2062b3b4db4'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
               'D07BD8662C56CB291B316EB2F5675605C74E02CF'  # David Edmundson <davidedmundson@kde.org>
               '1FA881591C26B276D7A5518EEAAF29B42A678C20') # Marco Martin <notmart@gmail.com>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
