--- a/libtommath/PKGBUILD
+++ b/libtommath/PKGBUILD
@@ -9,7 +9,7 @@ pkgrel=3
 pkgdesc="Highly optimized and portable routines for integer based number theoretic applications"
 url="http://www.libtom.org/"
 license=('custom')
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 depends=('glibc')
 source=("https://github.com/libtom/libtommath/releases/download/v$pkgver/ltm-$pkgver.tar.xz")
 sha256sums=('b7c75eecf680219484055fcedd686064409254ae44bc31a96c5032843c0e18b1')
