--- a/ebook-tools/PKGBUILD
+++ b/ebook-tools/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=ebook-tools
 pkgver=0.2.2
 pkgrel=7
 pkgdesc="Tools for accessing and converting various ebook file formats"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://sourceforge.net/projects/ebook-tools/"
 license=(custom)
 depends=(libzip libxml2 convertlit)
