--- a/kde/audiocd-kio/PKGBUILD
+++ b/kde/audiocd-kio/PKGBUILD
@@ -4,22 +4,23 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=audiocd-kio
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='Kioslave for accessing audio CDs'
 url='https://apps.kde.org/kio_audiocd/'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL LGPL FDL)
 depends=(kcmutils libkcddb libkcompactdisc lame)
 makedepends=(extra-cmake-modules kdoctools)
 optdepends=('opus-tools: encoding to opus format')
 groups=(kde-applications kde-multimedia)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('dbf9da8c9af73b857652893834ed00fb842606eec709cf317946b01ac86c4248'
+sha256sums=('ecd1bf345e5323bbafcd562acbabcd597a0581e4d675b3a61b7e850df8b19eaa'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
