--- a/kde/blinken/PKGBUILD
+++ b/kde/blinken/PKGBUILD
@@ -4,21 +4,22 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=blinken
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='Memory Enhancement Game'
 url='https://apps.kde.org/blinken/'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL LGPL FDL)
 groups=(kde-applications kde-education)
 depends=(kxmlgui phonon-qt5 hicolor-icon-theme)
 makedepends=(extra-cmake-modules kdoctools)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('cef8884f63533e3ffd679a1041aa635651b25a85067d5577b0e71226686a621b'
+sha256sums=('cccae6e860cd73427880a61d60b5640ca70e548e4f9836c398059c4bf0597cdd'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
