--- a/kde/akonadi/PKGBUILD
+++ b/kde/akonadi/PKGBUILD
@@ -6,24 +6,29 @@
 
 pkgbase=akonadi
 pkgname=(akonadi libakonadi)
-pkgver=21.12.1
-pkgrel=1
+pkgver=21.12.3
+pkgrel=2
 pkgdesc='PIM layer, which provides an asynchronous API to access all kind of PIM data'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://kontact.kde.org'
 license=(LGPL)
 makedepends=(extra-cmake-modules postgresql qt5-tools boost kitemmodels kaccounts-integration doxygen)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('d43833f1e587aacb758ed42b7431eea908dc6c69cf89183afcd9059d511b08c6'
+sha256sums=('4fe8ded706faf6ce87a48b7f164cbdd4eb71a342501eb9a0db40a87666cfda08'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
+  case "${CARCH}" in
+    powerpc) _cmake_options+=(-DCMAKE_CXX_FLAGS="-latomic") ;;
+  esac
+
   cmake -B build -S $pkgname-$pkgver \
     -DBUILD_TESTING=OFF \
-    -DBUILD_QCH=ON
+    -DBUILD_QCH=ON ${_cmake_options[@]}
   cmake --build build
 }
 
