--- a/kde/kmime/PKGBUILD
+++ b/kde/kmime/PKGBUILD
@@ -2,20 +2,21 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=kmime
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='Library for handling mail messages and newsgroup articles'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://kontact.kde.org'
 license=(LGPL)
 depends=(ki18n kcodecs)
 makedepends=(extra-cmake-modules doxygen qt5-tools)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('c1f4c06c61f6b4ddde7395b1cfb1f2411a32638e09c6f0a58c6557a7dffe4120'
+sha256sums=('fc5a1b86a18c0b0ef67759e3813cb49b3286b101f8494ce0497737ee29a1470f'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
