--- a/gpgme/PKGBUILD
+++ b/gpgme/PKGBUILD
@@ -16,17 +16,14 @@ makedepends=('libgpg-error' 'gnupg' 'qt5-base' 'python' 'swig')
 options=('debug')
 validpgpkeys=('6DAA6E64A76D2840571B4902528897B826403ADA') # Werner Koch (dist signing 2020)
 source=("https://www.gnupg.org/ftp/gcrypt/${pkgbase}/${pkgbase}-${pkgver}.tar.bz2"{,.sig}
-        python310.patch
-        include-config.patch)
+	python310.patch)
 sha256sums=('711eabf5dd661b9b04be9edc9ace2a7bc031f6bd9d37a768d02d0efdef108f5f'
             'SKIP'
-            '5de2f6bcb6b30642d0cbc3fbd86803c9460d732f44a526f44cedee8bb78d291a'
-            'f078d94086bfe50bd7b5640dbbd63e19b28b2d9f48d78f7c0156d8d8d9f2c163')
+	    '5de2f6bcb6b30642d0cbc3fbd86803c9460d732f44a526f44cedee8bb78d291a')
 
 prepare() {
   cd ${pkgbase}-${pkgver}
   patch -Np1 -i ../python310.patch
-  #patch -Np0 -i ../include-config.patch
 }
 
 build() {
