--- a/kde/libkleo/PKGBUILD
+++ b/kde/libkleo/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=libkleo
 pkgver=21.12.1
 pkgrel=1
 pkgdesc='KDE PIM cryptographic library'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://kontact.kde.org'
 license=(LGPL)
 depends=(qgpgme kitemmodels kpimtextedit)
