--- a/kde/libkleo/PKGBUILD
+++ b/kde/libkleo/PKGBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=libkleo
-pkgver=21.12.1
-pkgrel=1
+pkgver=21.12.3
+pkgrel=2
 pkgdesc='KDE PIM cryptographic library'
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://kontact.kde.org'
@@ -11,11 +11,12 @@ license=(LGPL)
 depends=(qgpgme kitemmodels kpimtextedit)
 makedepends=(extra-cmake-modules boost qt5-tools doxygen)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('97f031ee3d8ae4b0ade5a1699db7a0224cd529b3c031a1902440d4c10fe3b638'
+sha256sums=('f47c65970564a0aeeabaa90714023d9f1f9737297900b68fbf5a81d8281201a7'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
