--- a/games/eduke32/PKGBUILD
+++ b/games/eduke32/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributors: carstene1ns, Arkham, Christoph Zeiler, JD Steffen
 
 pkgname=eduke32
-_pkgdate=20220119
-_pkgrev='9949-cba220b0d'
+_pkgdate=20220331
+_pkgrev='9984-8c460c2d2'
 pkgver=$_pkgdate.r${_pkgrev/-/_}
 pkgrel=1
 pkgdesc="An advanced Duke Nukem 3D source port"
@@ -19,10 +19,10 @@ optdepends=('freepats-legacy: a free soundfont for music'
             'fluidsynth: alternative midi sequencer'
             'eduke32-shareware-episode: Duke Nukem 3D Demo')
 install=$pkgname.install
-source=("http://dukeworld.com/$pkgname/synthesis/$_pkgdate-$_pkgrev/eduke32_src_$_pkgdate-$_pkgrev.tar.xz"
+source=("https://dukeworld.com/eduke32/synthesis/latest/eduke32_src_${_pkgdate}-${_pkgrev}.tar.xz"
         "$pkgname.png"
         "$pkgname.desktop")
-sha256sums=('06488c264d07a45e93d7c570504c5c6178ff6b45f3c516cd8b9074e2af164c86'
+sha256sums=('29ad265f3b23a7f91eea97812de0670cb01f8c61224cc06cc6888183b8bf1b62'
             'b55a264b4682afabd49587d700d4c85ce6c2e7af7ce2764dd217ebe167549863'
             'cf2ea2c6a0d85ab15e30171ed5b921f1fcf5644de7af9638c0ef60de21c44f24')
 
