--- a/kde/pimcommon/PKGBUILD
+++ b/kde/pimcommon/PKGBUILD
@@ -2,20 +2,21 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=pimcommon
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='Common libraries for KDE PIM'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://kontact.kde.org'
 license=(LGPL)
 depends=(libkdepim kimap kldap akonadi-contacts akonadi-search purpose)
 makedepends=(extra-cmake-modules boost qt5-tools doxygen)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('0fb194291c91ac65b9ef4c32918adcbd5205ef015c6edeefcf2767b71762e4e5'
+sha256sums=('27148d059cb6d55d523ec594e66c6a5ef4d475d75ad8eff9a3e7884c01082dcc'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
