--- a/kde/kmbox/PKGBUILD
+++ b/kde/kmbox/PKGBUILD
@@ -2,20 +2,21 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=kmbox
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='Library for accessing mail storages in MBox format'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://kontact.kde.org'
 license=(LGPL)
 depends=(kmime)
 makedepends=(extra-cmake-modules doxygen qt5-tools)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('8aa4e44ba2713e4b70cc8d6b79fb11057e1839f451196b21452c7e50c3e2bcb4'
+sha256sums=('19731646fccea7f1615e7b0a6d2a1682e6afdf444ff74a6d40f6a821e1149411'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
