--- a/kde/messagelib/PKGBUILD
+++ b/kde/messagelib/PKGBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=messagelib
-pkgver=21.12.1
-pkgrel=1
+pkgver=21.12.3
+pkgrel=2
 pkgdesc='KDE PIM messaging library'
 arch=(x86_64 powerpc64le)
 url='https://kontact.kde.org'
@@ -11,11 +11,12 @@ license=(LGPL)
 depends=(kmailtransport libgravatar kidentitymanagement kmbox qca-qt5)
 makedepends=(extra-cmake-modules boost qt5-tools doxygen)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('ac2d4bf0d6ee66efb604bcb70a346b3762570a34666764662b7dc5c03bccdcab'
+sha256sums=('5c57b5d7fcabaf8030f609e1458bc8d0ad436901a5ef45cff83a470cd5b43077'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
