--- a/kde/akonadi-import-wizard/PKGBUILD
+++ b/kde/akonadi-import-wizard/PKGBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=akonadi-import-wizard
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='Import data from other mail clients to KMail'
 arch=(x86_64 powerpc64le)
@@ -14,11 +14,12 @@ makedepends=(extra-cmake-modules boost kdoctools)
 optdepends=('kdepim-addons: additional import plugins')
 groups=(kde-applications kde-pim)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('57388979ee68e8d7bd4f2b7101f8d843d4ea36d71d07b45e2f4a2d3175d2bf25'
+sha256sums=('92f1f46a7e1eccc83ae738c9c3a0c3dddecb2c6385f4f62b4a17b3f647e97db9'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
